// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ContactInfo 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-size: 12px;
}

<div>
  <div
    className="c0"
  >
    <span
      className="c1"
      size="s"
    >
      Имя: 
      name
    </span>
    <span
      className="c1"
      size="s"
    >
      Тел.: 
      phoneNumber
    </span>
  </div>
</div>
`;

exports[`Renders correct contact styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
>
  text
</div>
`;
